name:                indexed-vector
version:             0.1.0.0
synopsis:            Vectors keyed by arbitrary key types.
description:
  This library provides a fusion-capable, indexed dense array type
  build atop the @vector@ library and the 'Data.Ix.Ix' typeclass.
homepage:            http://github.com/bgamari/indexed-vector
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2017 Ben Gamari
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.Vector.Indexed,
                       Data.Vector.Indexed.Mutable
  other-extensions:    FlexibleContexts, DeriveTraversable, DeriveFoldable
  build-depends:       base >=4.7 && <4.17,
                       primitive >=0.6 && <0.8,
                       deepseq >= 1.4 && < 1.5,
                       vector >=0.11 && <0.13
  hs-source-dirs:      src
  default-language:    Haskell2010
